# AddressGenerator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api.md  architecture.md  development.md  usage.md
examples/: basic-scan.toml
src/address_generator/: __init__.py  __main__.py  api_types.py  app.py  cli.py  clients.py  config.py  constants.py  derivation.py  exceptions.py  formatting.py  models.py  prompting.py  reporting.py  services.py  stdin_loader.py  tui.py
tests/: conftest.py  test_app.py  test_app_extended.py  test_cli.py  test_cli_commands.py  test_clients.py  test_clients_extra.py  test_config.py  test_derivation.py  test_formatting.py  test_module_entrypoint.py  test_prompting.py  test_reporting.py  test_services.py  test_stdin_loader.py  test_tui.py
